Navbar LangSwitch Fix

--- a/client-app/public/assets/i18n/navbar/de.json
+++ b/client-app/public/assets/i18n/navbar/de.json
@@ -18,5 +18,6 @@
     "product to sell": "Produkt zu verkaufen",
     "product to sell pop": "Veröffentlichen Sie einen Artikel, den Sie verkaufen möchten",
     "my profile": "Mein Profil",
-    "logout": "Ausloggen"
+    "logout": "Ausloggen",
+    "Select language": "Sprache auswählen"
 }
