--- a/client-app/public/assets/i18n/navbar/en.json
+++ b/client-app/public/assets/i18n/navbar/en.json
@@ -18,5 +18,6 @@
     "product to sell": "Product to sell",
     "product to sell pop": "Publish an item that you want to sell",
     "my profile": "My profile",
-    "logout": "Logout"
+    "logout": "Logout",
+    "Select language": "Select language"
 }
