--- a/client-app/public/assets/i18n/navbar/it.json
+++ b/client-app/public/assets/i18n/navbar/it.json
@@ -18,5 +18,6 @@
     "product to sell": "Prodotto da vendere",
     "product to sell pop": "Pubblica un oggetto che vuoi vendere",
     "my profile": "Il mio profilo",
-    "logout": "Disconnettersi"
+    "logout": "Disconnettersi",
+    "Select language": "Seleziona la lingua"
 }
