--- a/client-app/public/assets/i18n/navbar/de.json
+++ b/client-app/public/assets/i18n/navbar/de.json
@@ -19,5 +19,9 @@
     "product to sell pop": "Veröffentlichen Sie einen Artikel, den Sie verkaufen möchten",
     "my profile": "Mein Profil",
     "logout": "Ausloggen",
-    "Select language": "Sprache auswählen"
+    "Select language": "Sprache auswählen",
+    "Englisch": "Englisch",
+    "Italian": "Italienisch",
+    "German": "Deutsch",
+    "French": "Französisch"
 }
