--- a/client-app/public/assets/i18n/modals/en.json
+++ b/client-app/public/assets/i18n/modals/en.json
@@ -11,5 +11,7 @@
     "Sure you want to do this (cannot undo)?": "Sure you want to do this (cannot undo)?",
     "Yes, delete it!": "Yes, delete it!",
     "No, keep it": "No, keep it",
-    "No, cancel": "No, cancel"
+    "No, cancel": "No, cancel",
+    "This action is irreversible": "This action is irreversible",
+    "Are you sure you want to delete this message?": "Are you sure you want to delete this message?"
 }
