--- a/client-app/public/assets/i18n/modals/de.json
+++ b/client-app/public/assets/i18n/modals/de.json
@@ -11,6 +11,8 @@
     "Sure you want to do this (cannot undo)?": "Sind Sie sicher, dass Sie dies tun möchten (kann nicht rückgängig gemacht werden)?",
     "Yes, delete it!":"Ja, löschen!",
     "No, keep it": "Nein, behalte es",
-    "No, cancel": "No, abbrechen"
+    "No, cancel": "No, abbrechen",
+    "This action is irreversible": "Diese Aktion ist irreversibel",
+    "Are you sure you want to delete this message?": "Möchten Sie diese Nachricht wirklich löschen?"
 
 }
