--- a/client-app/public/assets/i18n/modals/fr.json
+++ b/client-app/public/assets/i18n/modals/fr.json
@@ -11,5 +11,7 @@
     "Sure you want to do this (cannot undo)?": "Sure you want to do this (cannot undo)?",
     "Yes, delete it!": "Oui, supprimez-le !",
     "No, keep it": "Non, gardez-le",
-    "No, cancel": "Non, annuler"
+    "No, cancel": "Non, annuler",
+    "This action is irreversible": "Cette action est irréversible",
+    "Are you sure you want to delete this message?": "Etes-vous sur de vouloir supprimer ce message?"
 }
