--- a/client-app/public/assets/i18n/modals/en.json
+++ b/client-app/public/assets/i18n/modals/en.json
@@ -13,5 +13,9 @@
     "No, keep it": "No, keep it",
     "No, cancel": "No, cancel",
     "This action is irreversible": "This action is irreversible",
-    "Are you sure you want to delete this message?": "Are you sure you want to delete this message?"
+    "Are you sure you want to delete this message?": "Are you sure you want to delete this message?",
+    "Content is required": "Content is required",
+    "Edit message": "Edit message",
+    "Cancel": "Cancel",
+    "Submit": "Submit"
 }
