--- a/client-app/public/assets/i18n/modals/fr.json
+++ b/client-app/public/assets/i18n/modals/fr.json
@@ -13,5 +13,9 @@
     "No, keep it": "Non, gardez-le",
     "No, cancel": "Non, annuler",
     "This action is irreversible": "Cette action est irréversible",
-    "Are you sure you want to delete this message?": "Etes-vous sur de vouloir supprimer ce message?"
+    "Are you sure you want to delete this message?": "Etes-vous sur de vouloir supprimer ce message?",
+    "Content is required": "Le contenu est requis",
+    "Edit message": "Modifier le message",
+    "Cancel": "Annuler",
+    "Submit": "Soumettre"
 }
