--- a/client-app/public/assets/i18n/modals/it.json
+++ b/client-app/public/assets/i18n/modals/it.json
@@ -13,5 +13,9 @@
     "No, keep it": "No, tienilo",
     "No, cancel": "No, annulla",
     "This action is irreversible": "Questa azione è irreversibile",
-    "Are you sure you want to delete this message?": "Sei sicuro di voler eliminare questo messaggio?"
+    "Are you sure you want to delete this message?": "Sei sicuro di voler eliminare questo messaggio?",
+    "Content is required": "Il contenuto è richiesto",
+    "Edit message": "Modifica messaggio",
+    "Cancel": "Annulla",
+    "Submit": "Invia"
 }
