--- a/API/wwwroot/assets/i18n/modals/de.json
+++ b/API/wwwroot/assets/i18n/modals/de.json
@@ -11,6 +11,12 @@
     "Sure you want to do this (cannot undo)?": "Sind Sie sicher, dass Sie dies tun möchten (kann nicht rückgängig gemacht werden)?",
     "Yes, delete it!":"Ja, löschen!",
     "No, keep it": "Nein, behalte es",
-    "No, cancel": "No, abbrechen"
+    "No, cancel": "No, abbrechen",
+    "This action is irreversible": "Diese Aktion ist irreversibel",
+    "Are you sure you want to delete this message?": "Möchten Sie diese Nachricht wirklich löschen?",
+    "Content is required": "Inhalt ist erforderlich",
+    "Edit message": "Nachricht bearbeiten",
+    "Cancel": "Abbrechen",
+    "Submit": "Absenden"
 
 }
