ActivityPhoto - BackGround Upload and Delete

--- a/client-app/public/assets/i18n/forms/de.json
+++ b/client-app/public/assets/i18n/forms/de.json
@@ -5,8 +5,8 @@
     "Your motorcycyle brand": "Ihre Motorradmarke",
     "Description": "Beschreibung",
     "Category": "Kategorie",
-    "Date": "Datum",
-    "Time": "Uhrzeit",
+    "Starting date": "Anfangsdatum",
+    "Starting time": "Anfangszeit",
     "Date and Time": "Datum und Uhrzeit",
     "Country": "Land *",
     "City": "Stadt *",
