--- a/client-app/public/assets/i18n/forms/en.json
+++ b/client-app/public/assets/i18n/forms/en.json
@@ -6,8 +6,8 @@
     "Cancel": "Cancel",
     "Your motorcycyle brand": "Your motorcycyle brand",
     "Description": "Description",
-    "Date": "Date",
-    "Time": "Time",
+    "Starting date": "Starting date",
+    "Starting time": "Starting time",
     "Date and Time": "Date and Time",
     "Country": "Country *",
     "City": "City *",
