--- a/client-app/public/assets/i18n/forms/fr.json
+++ b/client-app/public/assets/i18n/forms/fr.json
@@ -6,9 +6,9 @@
     "Cancel": "Annuler",
     "Your motorcycyle brand": "Votre marque de moto",
     "Description": "Description",
-    "Date": "Date",
-    "Time": "Temps",
-    "Date and Time": "Date et heure",
+    "Starting date": "Date de début",
+    "Starting time": "Starting time",
+    "Date and Time": "Heure de départ",
     "Country": "Pays *",
     "City": "Ville *",
     "Departure/Starting Point": "Point de départ/de départ",
