--- a/client-app/public/assets/i18n/forms/it.json
+++ b/client-app/public/assets/i18n/forms/it.json
@@ -5,8 +5,8 @@
     "Your motorcycyle brand": "Il tuo marchio di moto",
     "Description": "Descrizione",
     "Category": "Categoria",
-    "Date": "Data",
-    "Time": "Ora",
+    "Starting date": "Data di inizio",
+    "Starting time": "Tempo di partenza",
     "Date and Time": "Data e ora",
     "Country": "Paese *",
     "City": "Città *",
